# crc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
doc/: Architecture.md  Project.md  architecture.uxf
include/crc/: crc.h  crc16a.h  crc16arc.h  crc16augccitt.h  crc16buypass.h  crc16ccittfalse.h  crc16cdma2000.h  crc16dds110.h  crc16dectr.h  crc16dectx.h  crc16dnp.h  crc16en13757.h  crc16genibus.h  crc16kermit.h  crc16maxim.h  crc16mcrf4xx.h  crc16modbus.h  crc16riello.h  crc16t10dif.h  crc16teledisk.h  crc16tms37157.h  crc16usb.h  crc16x25.h  crc16xmodem.h  crc32.h  crc32bzip2.h  crc32c.h  crc32d.h  crc32jamcrc.h  crc32mpeg2.h  crc32posix.h  crc32q.h  crc32sata.h  crc32xfer.h  crc8.h  crc8cdma2000.h  crc8darc.h  crc8dvbs2.h  crc8ebu.h  crc8icode.h  (+4 more)
src/: CMakeLists.txt  crc16usb.cpp
tests/: CMakeLists.txt  crc16arctest.cpp  crc16atest.cpp  crc16augccitttest.cpp  crc16buypasstest.cpp  crc16ccittfalsetest.cpp  crc16cdma2000test.cpp  crc16dds110test.cpp  crc16dectrtest.cpp  crc16dectxtest.cpp  crc16dnptest.cpp  crc16en13757test.cpp  crc16genibustest.cpp  crc16kermittest.cpp  crc16maximtest.cpp  crc16mcrf4xxtest.cpp  crc16modbustest.cpp  crc16riellotest.cpp  crc16t10diftest.cpp  crc16teledisktest.cpp  crc16tms37157test.cpp  crc16usbtest.cpp  crc16x25test.cpp  crc16xmodemtest.cpp  crc32bzip2test.cpp  crc32ctest.cpp  crc32dtest.cpp  crc32jamcrctest.cpp  crc32mpeg2test.cpp  crc32posixtest.cpp  crc32qtest.cpp  crc32satatest.cpp  crc32test.cpp  crc32xfertest.cpp  crc8cdma2000test.cpp  crc8darctest.cpp  crc8dvbs2test.cpp  crc8ebutest.cpp  crc8icodetest.cpp  crc8itutest.cpp  (+5 more)
tools/: CMakeLists.txt  lookuptable.h  lookuptablegenerator.cpp
tools/crclibgenerator/: CMakeLists.txt  arguments.cpp  arguments.h  crclibgenerator.cpp  lookuptable.h
tools/lookuptablegenerator/: CMakeLists.txt  lookuptablegenerator.cpp
